# risc0

./: CUDA_ARCHITECTURE_REFERENCE.md  CUDA_INTEGRATION_PLAN.md  CUDA_RESOURCE_ERROR_FIX.md  Cargo.toml
.cargo/: config.toml
bento/db-web-app/: package-lock.json  package.json  server.js
bento/db-web-app/public/: app.js  index.html  style.css
bento/dockerfiles/: web_app.dockerfile
examples/: Cargo.toml
examples/ecdsa/p384/: Cargo.toml  README.md
examples/ecdsa/p384/methods/: Cargo.toml
examples/ecdsa/p384/methods/guest/: Cargo.toml
examples/ecdsa/p384/src/: main.rs
examples/groth16-verifier/methods/guest/: Cargo.toml
examples/multi-gpu/: Cargo.toml
examples/multi-gpu/methods/: Cargo.toml
examples/multi-gpu/methods/guest/src/: main.rs
examples/multi-gpu/methods/src/: lib.rs
examples/multi-gpu/src/: main.rs
examples/revm/: Cargo.toml  README.md
examples/revm/methods/: Cargo.toml
examples/revm/methods/guest/: Cargo.toml
examples/revm/src/: main.rs
groth16_proof/docker/: prover-cuda.Dockerfile  prover.Dockerfile
groth16_proof/scripts/: install_cuda_prover.sh
risc0/circuit/keccak/methods/guest/: Cargo.toml
risc0/circuit/recursion-sys/cxx/: layout.cpp.inc  step_compute_accum.cpp  step_exec.cpp  step_verify_accum.cpp  step_verify_bytes.cpp  step_verify_mem.cpp
risc0/circuit/recursion-sys/kernels/cuda/: eval_check.cu  layout.cu.inc
risc0/circuit/rv32im/: Cargo.toml  build.rs
risc0/circuit/rv32im-sys/kernels/cuda/: ffi.cu
risc0/circuit/rv32im/src/execute/: bigint.rs  executor.rs  jit.rs  jit_emulator.rs  mod.rs  pager.rs  poseidon2.rs  r0vm.rs  rv32im.rs  tests.rs
risc0/circuit/rv32im/src/prove/: mod.rs
risc0/circuit/rv32im/src/prove/hal/: cuda.rs  cuda_optimized.rs  mod.rs
risc0/circuit/rv32im/src/prove/witgen/: paged_map.rs  poseidon2.rs  preflight.rs
risc0/groth16/: Cargo.toml
risc0/groth16/src/: data_structures.rs  verifier.rs
risc0/r0vm/src/actors/: factory.rs  optimized_rpc.rs  rpc.rs
risc0/sys/kernels/zkp/cuda/: cuda.h
risc0/zkp/src/hal/: cuda_kernel_config.rs  mod.rs
risc0/zkvm/examples/: datasheet.rs
risc0/zkvm/methods/guest/: Cargo.toml
risc0/zkvm/src/host/client/prove/: mod.rs
rzup/: Cargo.toml
rzup/src/: build.rs  error.rs  lib.rs
