[package]
name = "p384-example"
version = "0.1.0"
edition = "2021"

default-run = "p384-example"

[dependencies]
p384 = { version = "0.13.0", features = ["serde"] }
p384-methods = { path = "methods" }
rand_core = "0.6.4"
risc0-zkvm = { path = "../../../risc0/zkvm" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
