[package]
name = "p384-example"
version = "0.1.0"
edition = "2021"

default-run = "p384-example"

[dependencies]
p384 = { version = "0.13.0", features = ["serde"] }
p384-methods = { path = "methods" }
rand_core = "0.6.4"
risc0-zkvm = { path = "../../../risc0/zkvm" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]



[patch.crates-io]
# TODO: patch is here...
# p384 = { git = "https://github.com/preston4896/RustCrypto-elliptic-curves", branch = "risczero" }
p384 = { path = "/Users/tzerrell/code/external/RustCrypto-elliptic-curves/p384" }