[package]
name = "revm-inner"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
libc = { version = "0.2", default-features = false }  # TODO Shouldn't be needed
revm-precompile = "16"
risc0-zkvm = { path = "../../../../risc0/zkvm", default-features = false, features = ["std", "unstable"] }


[patch.crates-io]
# TODO: Not thrilled about this approach, required by the c-kzg example
#c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", rev = "304eacb4f5fec09e837936e4ada6705ecac581f0" }
c-kzg = { path = "../../../../../external/c-kzg-4844" }
substrate-bn = { git = "https://github.com/risc0/paritytech-bn", rev = "22108fe8c6ea1ebc1358fc4fd6854a6bf46e3509" }
