[package]
name = "p384-verify"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { path = "../../../../../risc0/zkvm", default-features = false, features = [
	"std",
	"unstable",
] }
hex-literal = "0.4"
p384 = { version = "=0.13.0", features = [
	"serde",
	"expose-field",
	"std",
	"ecdsa",
], default-features = false }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
# TODO: patch is here...
# p384 = { git = "https://github.com/preston4896/RustCrypto-elliptic-curves", branch = "risczero" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }

[profile.release]
# Empirically observed to result in the best performance for this binary (in particular, better than
# "fat"). It's often a good idea to experiment with different optimization levels and options.
codegen-units = 1
lto = "thin"
